crates/biome_cli/tests/snapshots/main_commands_check/no_lint_if_linter_is_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check fix.js
```

## `biome.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js

(1 >= -0)

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
fix.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - (1·>=·-0)
      1 │ + 1·>=·-0;
    3 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
