crates/biome_cli/tests/snapshots/main_commands_check/no_lint_if_linter_is_disabled_when_run_apply_biome_jsonc.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write fix.js
```

## `biome.jsonc`

```json
{
  // I am a comment
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
