crates/biome_cli/tests/snapshots/main_commands_check/no_lint_when_file_is_ignored.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write test.js
```

## `biome.json`

```json
{ "linter": { "includes": ["**", "!test.js"] } }
```

## `test.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
