crates/biome_cli/tests/snapshots/main_commands_check/print_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe --reporter=json fix.js
```

## `fix.js`

```js
const a = 4;
console.log(a);

```

# Emitted Messages

```block
The `json` and `json-pretty` reporters are experimental and may change in patch releases.
```

```block
{"summary":{"changed":1,"unchanged":0,"matches":0,"duration":"<TIME>","errors":0,"warnings":0,"infos":0,"skipped":0,"suggestedFixesSkipped":0,"diagnosticsNotPrinted":0,"scannerDuration":"<TIME>"},"diagnostics":[],"command":"check"}
```
