crates/biome_cli/tests/snapshots/main_commands_check/print_minimal.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.js`

```js
for(;true;);

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:6 lint/correctness/noConstantCondition 

```

```block
check.js format 

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
